gateway-opa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magnanimo-ingress
  namespace: kuma-app
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /magnanimo
        pathType: Prefix
        backend:
          service:
            name: magnanimo
            port:
              number: 4000
